--- a/paper/paper 1/paper 1.tex
+++ b/paper/paper 1/paper 1.tex
@@ -488,6 +488,19 @@ further research and development is needed.
 \subsection{Motivation and Overview}
 \label{motivation}
 
+-----
+
+This paper is based on different technical reports
+
+die contribution ist die umfangreiche auswertung der datenebank /
+komplette open source implemntierung vollständig dokumentuert / 
+
+in diesem paper wollen wir die highlights präsentieren / 
+
+diese arbeit ist die basis um besser über begrifflichkeiten zu reden /
+
+-----
+
 Based on our work in the \emph{DCMI RDF Application Profiles Task Group} and in cooperation with the \emph{W3C Data Shapes Working Group}, 
 we identified and published by today 81 requirements to formulate RDF constraints that are required by various stakeholders for data applications.
 Each of these requirements corresponds to a constraint type from which concrete constraints are instantiated to be checked on RDF data.
@@ -2592,7 +2605,7 @@ The first solution is applied on local knowledge bases whereas the second is mor
 %Another important finding is that, none of other languages covers the other so far in terms of expressivity.
 
 We published by today 81 requirements to formulate RDF constraints that are required by various stakeholders for data applications.
-Each of these requirements corresponds to a constraint type and is mapped to \emph{DL}
+Each of these requirements corresponds to a constraint type which is mapped to \emph{DL}
 to determine which \emph{DL} constructs are needed to express each constraint type
 and therefore to provide the foundational basis for constraint types \cite{BoschNolleAcarEckert2015}.
 
@@ -2624,6 +2637,16 @@ Therefore, we investigate for each constraint type
 (1) if the constraint type depends on the \emph{CWA} and (2) if the constraint type depends on the \emph{UNA}.
 For the majority of the constraint types it makes a difference if the \emph{CWA} or the \emph{OWA} and if the \emph{UNA} or the \emph{nUNA} is assumed (Section \ref{CWA-UNA-dependency}).
 
+-----
+
+SPARQL is generally seen as the method of choice to validate data according to certain constraints, although it is not ideal for their formulation. 
+In contrast, more intuitive and concise constraint languages are comparatively easy to understand, can be placed on top of SPARQL 
+but lack an implementation to validate RDF data.
+
+SPARQL and SPIN are powerful and widely used for constraint formulation and validation \cite{Fuerber2010}, but constraints formulated as SPARQL queries are not as understandable as one wishes them to be.
+
+SPARQL is a very good basis for the implementation of constraint languages
+
 Using these findings, we determined for the five most common constraint languages which constraint types they enable to express.
 By revealing which constraint types are not covered by exiting languages, 
 we give directions and emphasize the significant role \emph{SPIN} and \emph{OWL 2 DL} play for the future development of constraint languages (Section \ref{motivation}).
@@ -2637,7 +2660,10 @@ as well as constraints of major constraint types representable by \emph{ReSh} an
 %(1) to select individual resources for which reasoning should be performed when they are validated against $\mathcal{R}$ constraints,
 %(2) to select individual $\mathcal{R}$ constraint types for which reasoning should be executed, and
 %(3) to globally determine if for all $\mathcal{R}$ constraint types reasoning should be done. 
-In addition, we implemented reasoning capabilities for all constraint types for which \emph{OWL 2 QL} and \emph{OWL 2 DL} reasoning may be performed to improve data quality\footref{spin-mappings} (Section \ref{implementation}).
+In addition, we implemented reasoning capabilities for all constraint types for which \emph{OWL 2 QL} and \emph{OWL 2 DL} reasoning may be performed to improve data quality\footref{spin-mappings}.
+We provide these open source validation and reasoning implementations of constraint types to use them as a basis to drive the further development of constraint languages (Section \ref{implementation}).
+
+-----
 
 As part of future work we extend the \emph{RDF Validator} to provide a list of languages for which the expressivity is enough to express selected constraint types
 depending on users' individual needs.
@@ -2648,9 +2674,11 @@ In this regard, it would be charming to have an estimation on which group of con
 
 -----
 
-feedback Kai:
+Reasoning and validation are closely related.
+When constraints are defined one has to determine if reasoning should be executed.
 
-wichitge arbeit um ordnung zu schaffen / weitere arbeit an den sprachen / um die weitere arbeit zu vereinfachen stelen wir einen implementierung vor / ann benutzt werden zur weiteren arbeit an constraint languages um die basis zu schaffen wa die impementierung angeht um implementierungsoptionen vergleichen zu können / als erstes vor motivation: arbeit die in verschienden technical reports basiert.. die contribution ist die umfangreiche auswertung der datenebank,k komplette implemntierung vollständig dokumentuert / implementerung als open soure in diesem paper wollen wir die highlights präsentieren / diese arbeit ist die basis um besser über begrifflichkeiten zu reden / sprachen können in sparql umgesetzt werden / comunity abhängige vorlieben für sprachen sparql gute basis zum imepementierung und umsetzung aber on top umfangreichenr sprachen /validierung  constraint languages beschränkt sich nicht nur sondern im umfeld reasoning und validierung gehen hand in hand da bereits beim festlegen der constraints festegen ob reasoning oder nicht interoprable lösung für datenvalidierung eigentlich nur funktioneiren kann wenn man über die einigeung auf einen gemeinsame constraint languge sondern welche semntics zugrundeliegen und reasoning ausgeführt werden kann dass validierung so ausgeführt wird so wie gewollt 
+Interoperable solutions for data validation can only work if, in addition to the selection of a standard constraint language,
+the underlying semantics are determined and if it is determined if reasoning should be executed. 
 
 -----
 
