--- a/paper/paper 1/paper 1.tex
+++ b/paper/paper 1/paper 1.tex
@@ -299,7 +299,7 @@ Erman Acar\\
 \begin{abstract}
 For data practitioners embracing the world of RDF and Linked Data, the openness and flexibility is a mixed blessing. 
 For them, data validation according to predefined constraints is a much sought-after feature, particularly as this is taken for granted in the XML world.
-
+%
 We investigate the role that reasoning plays in practical data validation,
 why reasoning is beneficial for RDF validation, and 
 how to overcome the major shortcomings when validating RDF data by performing reasoning prior to validation.
@@ -467,7 +467,7 @@ and give directions for the further development of constraint languages.
 
 Recently, RDF validation as a research field gained speed due to common needs of data practitioners. A typical example is the library domain that co-developed and adopted Linked Data principles very early. For libraries, the common description of resources are key business and they have a long tradition in developing and using interoperable data formats. While they embrace the openness of Linked Data and the data modeling principles provided by RDF, the data is still mostly represented in XML and this is unlikely to change soon. 
 Among the reasons for the success of XML is the possibility to formulate fine-grained constraints to be met by the data and to validate the data according to these constraints using powerful systems like \emph{DTDs}, \emph{XML Schemas}, \emph{RELAX NG}, or \emph{Schematron}.
-
+%
 A typical example is the definition of a library record describing a book. There are clear rules which information has to be available to describe a book properly (required fields, like a title), but also how information like an ISBN number is properly represented. Libraries seek to make their own data reusable for general purposes, but also to enrich and interlink their own data. Checking if third-party data meets own requirements or validating existing data according to new needs for a Linked Data application are among common use cases for RDF validation.
 
 In 2013, the \emph{W3C} invited experts from industry, government, and academia to the RDF Validation Workshop\footnote{\url{http://www.w3.org/2012/12/RDF-val/}}, 
@@ -485,21 +485,8 @@ further research and development is needed.
 \subsection{Motivation and Overview}
 \label{motivation}
 
------
-
-This paper is based on different technical reports
-
-die contribution ist die umfangreiche auswertung der datenebank /
-komplette open source implemntierung vollständig dokumentuert / 
-
-in diesem paper wollen wir die highlights präsentieren / 
-
-diese arbeit ist die basis um besser über begrifflichkeiten zu reden /
-
------
-
 Within the \emph{DCMI Task Group}, we initiated a collaboratively curated database of RDF validation requirements which contains the findings of the working groups based on various case studies provided by data institutions \cite{BoschEckert2014}. It is publicly available and open for further contributions\footnote{Online at \url{http://purl.org/net/rdf-validation}}.
-The database connects requirements to use cases, case studies and implementations and forms the basis of this paper. 
+The database connects requirements to use cases, case studies and implementations and forms the basis of this paper in which we will present the key findings we got from the analysis of the RDF validation requirements. 
 Based on our work in the \emph{DCMI Task Group} and in cooperation with the \emph{W3C Working Group}, 
 we identified and published by today 81 requirements to formulate RDF constraints that are required by various stakeholders for data applications.
 Each of these requirements corresponds to a constraint type from which concrete constraints are instantiated to be checked on RDF data.
@@ -1133,10 +1120,10 @@ we cannot apply them directly to validate RDF data since \emph{OWL 2} reasoning 
 The contributions of this paper are:
 %(1) We lay the ground for discussions on RDF validation.
 %(2) We work out the role that reasoning plays in practical data validation and why reasoning is important for validation.
-(1) We work out the role that reasoning plays in practical data validation,
+(1) We identified by today 81 types of constraints that are required by various stakeholders for data applications.
+(2) We work out the role that reasoning plays in practical data validation,
 why reasoning is beneficial for RDF validation, and 
-how to overcome the major shortcomings when validating RDF data by performing reasoning prior to validation. 
-(2) We identified and published by today 81 types of constraints that are required by various stakeholders for data applications. 
+how to overcome the major shortcomings when validating RDF data by performing reasoning prior to validation.  
 (3) For each constraint type, we examine
     if reasoning may improve data quality, 
     how efficient in terms of runtime validation is performed with and without reasoning, and
